# VisualNovelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: .gitignore  CMakeLists.txt
Engine/include/Core/: Engine.h  GameLoop.h  Loader.h  Window.h
Engine/include/Input/: Input.h
Engine/include/Render/: Renderer.h
Engine/include/States/: MenuState.h  PauseState.h  PlayState.h  SettingsState.h  State.h  StateManager.h
Engine/src/: main.cpp
Engine/src/Core/: Engine.cpp  Window.cpp
Game/: CMakeLists.txt  main.cpp
include/Core/: Engine.h
include/Input/: Input.h
